# Proyectos-1.1

./: alex 1.py  app.py  crash_test_one.py  gpu1.py  gravity.py  gyhejf.py  holauno.sh  index.html  index.js  main.cpp  package-lock.json  package.json  python tkinter one.py  python tkinter one_searcher.py  selenium1.2.py  selenium1.3.py  selenium1.py  style.css  tesorflow1.py  test sxhdg.cpp  test.asm  test2heb.js  testOne.js  test_working_one.cpp  tkinter1.py  tradingbot1.5.py
AI_tesorflow_test/: test1.ipynb  test1.py
AI_test/: test1.py
SDL_Phisics/: game.sublime-project  game.sublime-workspace
SDL_TEST1/: app.cpp
TEstibng2y/: CMakeLists.txt  FindBox2D.cmake  main.cpp
TweetUP/: Form1.Designer.cs  Form1.cs  Program.cs  TweetUP.csproj
app2/: app.py  dh.py  dh2.py  erawgd.py  main.py  yhjk.py
c++_c/: testonejdjf.cpp  testonejdjf.hpp
colegio/: for.py
directx sgd/: directx sgd.cbp  directx sgd.layout
hacking/: test1.js  test1.py
importante para un programa/: add python to php.txt  crear un servidor en php.txt
importante paraun programa/: Exit c Sharp.txt  email c sharp.txt  email2 c sharp.txt  gmailapiprogram.txt  important pyguitui.py  lunk.txt  mesageboc.txt  open other pages in c sahrp.txt  para cambiar de archivo.txt  random license key1.py  recieve email c sharp.txt  save data in txt c sharp.txt  super messagebox.txt  tk.txt  user register and login.txt
my-app/: package-lock.json  package.json
my-app-two/: package-lock.json  package.json
other/: Filejhds.s
pc 1/: main.py
proyecto 1.1/: app.py
proyecto 1.2/: app.py
python/: gay.html  (+5 more)
(+84 files in other folders)
